# interp_embed

./: .gitignore  README.md  pyproject.toml
examples/: analysis.ipynb  functions.py
interp_embed/: __init__.py  dataset_analysis.py
interp_embed/llm/: prompts.py  utils.py
interp_embed/sae/: api_sae.py  base_sae.py  local_sae.py  utils.py
interp_embed/saes/: local_sae.py  utils.py
interp_embed/utils/: helpers.py
paper/diffing/: baseline_utils.py  generate_baseline_hypotheses.py  generate_sae_hypotheses.py  hypothesis_verifier.py  sae_utils.py
test/: test_feature_labels.py
tests/: test_feature_labels.py
